--- a/helloworld/helloworld/public/style.css
+++ b/helloworld/helloworld/public/style.css
@@ -4,6 +4,19 @@ body {
     line-height: 1.4em;
     background: #414243;
     color: #E7E8E9;
+    padding: 20px;
+}
+
+#editor {
+    margin-left: 410px;
+}
+
+#ft-background {
+    background: #E7E8E9;
+    border: 1px solid black;
+    float: left;
+    height: 600px;
+    width: 400px;
 }
 
 .rascalcontent { /* named to avoid conflict with phpBB .content rules */
@@ -12,6 +25,9 @@ body {
     margin-right: auto;
 }
 
-iframe {
+#textfield {
     background: #E7E8E9;
+    border: 1px solid black;
+    color: #414243;
+    padding: 3px;
 }
