--- a/templates/lcd.html
+++ b/templates/lcd.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="utf-8">
     <title>Rascal demo</title>
-    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Droid+Sans|Molengo|VT323">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
     <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}"> 
-    <script src="http://code.jquery.com/jquery-1.5.js"></script>
+    <script src="{{ url_for('static', filename='jquery-1.5.js') }}"></script>
 </head>
 <body>
     <div class="rascalcontent">
