--- a/templates/relay.html
+++ b/templates/relay.html
@@ -26,9 +26,9 @@
 </head>
 <body>
     <div class="rascalcontent">
-        <h1>Rascal demo</h1>
+        <h1>Relay demo</h1>
         <form id="relay-form">
-            <label for="target_state">Toggle relay on Brandon's desk:</label>
+            <label for="target_state">Toggle relay to charge and discharge capacitor:</label>
             <select id="target_state" onchange="tellRascal();">
                 {% if pin == '1' %}
                 <option value="0">Off</option>
@@ -39,7 +39,7 @@
                 {% endif %}
             </select>
         </form>
-        <div id="chart1" style="height:300px;width:900px;"></div>
+        <div id="chart1" style="height:600px;width:900px;"></div>
     </div>
     <script language="javascript" type="text/javascript">
     line0 = {{chan0}}
@@ -52,10 +52,10 @@
             location: 'nw' },
         title: 'Rascal voltage readings',
         series: [
-            {label: 'Channel 0 (relay)', lineWidth:1, showMarker:false},
-            {label: 'Channel 1 (capacitor)', lineWidth:1, showMarker:false},
-            {label: 'Channel 2', lineWidth:1, showMarker:false},
-            {label: 'Channel 3 (temperature sensor)', lineWidth:1, showMarker:false}
+            {label: 'Channel 0 (relay)', lineWidth:3, showMarker:false},
+            {label: 'Channel 1 (capacitor)', lineWidth:3, showMarker:false},
+            {label: 'Channel 2', lineWidth:3, showMarker:false},
+            {label: 'Channel 3', lineWidth:3, showMarker:false}
         ],
         axes: {
             xaxis: {
@@ -66,12 +66,7 @@
             yaxis: {
                 label: 'Voltage [V]',
                 min: 0,
-                max: 3.3 },
-            y2axis: {
-                label: 'Temperature [°C]',
-                min: 0,
-                max: 125,
-                show: true }
+                max: 18.0 },
         },
         seriesColors: [ "#4bb2c5", "#cd2820", "#EAA228", "#579575", "#839557", "#958c12",
                 "#953579", "#4b5de4", "#d8b83f", "#ff5800", "#0085cc"]
