--- a/static/style.css
+++ b/static/style.css
@@ -2,9 +2,8 @@ body {
     font-family: "Molengo","URW Gothic L",sans-serif;
     font-size: 1em;
     line-height: 1.4em;
-    background: #414243;
+    margin: 0;
     color: #E7E8E9;
-    padding: 20px;
 }
 
 a {
@@ -16,21 +15,72 @@ li {
     list-style-type: none;
 }
 
-#editor {
-    margin-left: 410px;
+#topbar {
+    background: #414243;
+    height: 50px;
+    text-align: right;
 }
 
-ul.jqueryfiletree {
+#nav {
+    margin: 0;
+}
+
+#nav li {
+    display: inline;
+}
+
+#rascallogo {
+    clear: none;
+    float: left;
+    border: none;
+    margin: 5px;
+}
+
+#button-bar {
+    height: 50px;
+}
+
+input {
+    margin: 5px;
+    width: 120px;
+}
+
+#message-panel {
+    float: right;
+    clear: none;
+    color: #EF4A42;
+    margin: 5px;
+    height: 40px;
+    width: 642px;
+}
+
+#reload {
+    float: right;
+    clear: none;
+    width: 160px;
+}
+
+.jqueryfiletree {
+    background: #0A001F !important;
+}
+
+.jqueryfiletree a {
+    background: #0A001F !important;
+    color: #E7E8E9 !important;
     font-family: "Molengo","URW Gothic L",sans-serif;
     font-size: 1em;
 }
 
+.jqueryfiletree a:hover {
+    background: #414243 !important;
+}
+
 #ft-background {
-    background: #E7E8E9;
-    border: 1px solid black;
-    float: left;
+    background: #0A001F !important;
+    border: 3px solid #414243;
+    margin-top: -619px;
     height: 600px;
-    width: 400px;
+    width: 350px;
 }
 
 .rascalcontent { /* named to avoid conflict with phpBB .content rules */
@@ -40,15 +90,14 @@ ul.jqueryfiletree {
 }
 
 #textfield {
-    background: #E7E8E9;
-    border: 1px solid black;
-    color: #414243;
+    margin-left: 360px;
     padding: 3px;
     height: 600px;
 }
 
 .CodeMirror-scroll {
     height: 600px !important;
+    border: 3px solid #414243;
 }
 
 /* Zurb awesome buttons */
