--- a/templates/editor.html
+++ b/templates/editor.html
@@ -49,8 +49,8 @@
             <div id="filetree" class="cm-s-night"></div>
         </div>
         <div id="new-file-folder-bar">
-            <img src="{{ url_for('static', filename='oxygen-new-file-32x32.png') }}">
-            <img src="{{ url_for('static', filename='oxygen-new-folder-32x32.png') }}">
+            <img id="new-file" src="{{ url_for('static', filename='oxygen-new-file-32x32.png') }}">
+            <img id="new-folder" src="{{ url_for('static', filename='oxygen-new-folder-32x32.png') }}">
         </div>
     </div>
     <script type="text/javascript">
@@ -91,6 +91,19 @@
             openFile(path.split('/var/www/editable/')[1]);
         });
     });
+
+    $('#reload').bind('click', function(event) {
+        $.post('reload', '', alert('Pytronics reload has begun.'));
+    });
+
+    $('#new-file').bind('click', function(event) {
+        $.post('new_file', {name: 'newfile.txt'}, alert('Pytronics reload has begun.'));
+    });
+
+    $('#new-folder').bind('click', function(event) {
+        $.post('new_folder', {name: 'newfolder'}, alert('Pytronics reload has begun.'));
+    });
+
     </script>
 </body>
 </html>
