--- a/editor/templates/config.html
+++ b/editor/templates/config.html
@@ -13,9 +13,9 @@
         <div class="rascalcontent">
             <a href="/edit"><img id="rascallogo" src="/static/rm-logo-words-only-light.png"></a>
             <ul id="nav">
-                <li><a href="log">log</a> | </li>
-                <li><a href="config">config</a> | </li>
-                <li><a href="monitor">monitor</a></li>
+                <li><a href="/log">log</a> | </li>
+                <li><a href="/config">config</a> | </li>
+                <li><a href="/monitor">monitor</a></li>
             </ul>
         </div>
     </div>
