--- a/editor/templates/monitor.html
+++ b/editor/templates/monitor.html
@@ -13,14 +13,24 @@
         <div class="rascalcontent">
             <a href="/edit"><img id="rascallogo" src="/static/rm-logo-words-only-light.png"></a>
             <ul id="nav">
-                <li><a href="log">log</a> | </li>
-                <li><a href="config">config</a> | </li>
-                <li><a href="monitor">monitor</a></li>
+                <li><a href="/log">log</a> | </li>
+                <li><a href="/config">config</a> | </li>
+                <li><a href="/monitor">monitor</a></li>
             </ul>
         </div>
     </div>
     <div class="rascalcontent">
-    This is the monitor page.
+        <div class="log-display">
+            <table class="zebra">
+                <tr><td>{{ processes | safe }}</td></tr>
+            </table>
+        </div>
     </div>
+     <script type="text/javascript">
+ $(document).ready(function(){
+   $(".zebra tr").mouseover(function(){$(this).addClass("over");}).mouseout(function(){$(this).removeClass("over");});
+   $(".zebra tr:even").addClass("alt");
+ });
+     </script>
 </body>
 </html>
