--- a/public/templates/relay.html
+++ b/public/templates/relay.html
@@ -5,11 +5,11 @@
     <title>Rascal demo</title>
     <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Droid+Sans|Molengo">
     <link rel="stylesheet" type="text/css" href="public/static/style.css">
-    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}"> 
+    <link rel="shortcut icon" href="public/static/favicon.ico"> 
     <script src="http://code.jquery.com/jquery-1.5.js"></script>
     <!--[if IE]><script language="javascript" type="text/javascript" src="/excanvas.js"></script><![endif]-->
-    <script language="javascript" type="text/javascript" src="{{ url_for('static', filename='jquery.jqplot.js') }}"></script>
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='jquery.jqplot.css') }}" />
+    <script language="javascript" type="text/javascript" src="public/static/jquery.jqplot.js"></script>
+    <link rel="stylesheet" type="text/css" href="public/static/jquery.jqplot.css" />
     <script language="javascript" type="text/javascript">
     function tellRascal() {
         $.ajax({
