--- a/public/templates/lcd.html
+++ b/public/templates/lcd.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Rascal demo</title>
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
+    <link rel="stylesheet" type="text/css" href="/static/demo.css">
     <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}"> 
     <script src="{{ url_for('static', filename='jquery-1.5.js') }}"></script>
 </head>
