--- a/editor/templates/config.html
+++ b/editor/templates/config.html
@@ -1,9 +1,9 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title>Rascal demo</title>
-    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
+    <link rel="shortcut icon" href="/editor/static/favicon.ico">
 
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
+    <link rel="stylesheet" type="text/css" href="/editor/static/style.css">
     <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Droid+Sans|Molengo'">
 
     <script src="http://code.jquery.com/jquery-1.5.js"></script>
@@ -11,7 +11,7 @@
 <body>
     <div id="topbar">
         <div class="rascalcontent">
-            <a href="/edit"><img id="rascallogo" src="/static/rm-logo-words-only-light.png"></a>
+            <a href="/edit"><img id="rascallogo" src="/editor/static/rm-logo-words-only-light.png"></a>
             <ul id="nav">
                 <li><a href="/log">log</a> | </li>
                 <li><a href="/config">config</a> | </li>
