Make filetree remember state of expansion/collapse

--- a/editor/templates/editor.html
+++ b/editor/templates/editor.html
@@ -97,9 +97,16 @@
 
     $(document).ready( function() {
         editor.setOption('mode', pickMode('{{ fileext }}'));
-        $('#filetree').fileTree({ root: '/var/www/public/', script: '/get_dirlist' }, function(path) {
+        $('#filetree').fileTree({ root: '/var/www/public/', script: '/get_dirlist', multiFolder: false }, function(path) {
             openFile(path.split('/var/www/public/')[1]);
         });
+        if("{{ folder }}" !== "") { // If we're editing a file, expand the directory it's in and list the contents
+            $.post("/get_dirlist", {dir: "/var/www/public/{{ folder }}"}, function(response) {
+                $('#filetree ul li a:contains({{ folder }})').parent().append(response);
+                $('.jqueryFileTree').show();
+                $('#filetree ul li a:contains({{ folder }})').parent().removeClass('collapsed').addClass('expanded');
+            });
+        }
     });
 
     $('#reload').bind('click', function(event) {
