--- a/editor/static/style.css
+++ b/editor/static/style.css
@@ -124,7 +124,8 @@ input {
 
 #location-bar {
     background: #0A001F !important;
-    margin-left: 360px;
+    margin-left: 363px;
+    margin-right: 3px;
     padding: 3px;
     border: 3px solid #414243;
 }
