--- a/editor/templates/editor.html
+++ b/editor/templates/editor.html
@@ -125,6 +125,16 @@
                 $( "#overlay" ).css("visibility", "visible");
         });
     });
+
+    $('li').live('mouseenter mouseleave', function(event) {
+        if(event.type == 'mouseenter') {
+            $(this).children('img').css('visibility', 'visible');
+        } else {
+            $(this).children('img').css('visibility', 'hidden');
+
+        }
+    });
+
     </script>
 </body>
 </html>
