--- a/editor/templates/editor.html
+++ b/editor/templates/editor.html
@@ -16,7 +16,7 @@
     <script src="/editor/static/codemirror2/mode/javascript/javascript.js"></script>
     <script src="/editor/static/codemirror2/mode/python/python.js"></script>
     <script src="/editor/static/codemirror2/mode/xml/xml.js"></script>
-    <script src="http://code.jquery.com/jquery-1.5.js"></script>
+    <script src="/editor/static/jquery-1.5.js"></script>
     <script src="/editor/static/jquery.filetree.js"></script>
 </head>
 <body>
