--- a/public/templates/relay.html
+++ b/public/templates/relay.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Droid+Sans|Molengo">
     <link rel="stylesheet" type="text/css" href="/static/demo.css">
     <link rel="shortcut icon" href="/static/favicon.ico"> 
-    <script src="http://code.jquery.com/jquery-1.5.js"></script>
+    <script src="/static/jquery-1.5.js"></script>
     <!--[if IE]><script language="javascript" type="text/javascript" src="/excanvas.js"></script><![endif]-->
     <script language="javascript" type="text/javascript" src="/static/jquery.jqplot.js"></script>
     <link rel="stylesheet" type="text/css" href="/static/jquery.jqplot.css" />
